--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+        multiDexEnabled true
+
         applicationId "com.example.pizzaapp"
         minSdkVersion 16
         targetSdkVersion 30
@@ -28,11 +30,16 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:multidex:2.0.1'
+    // FirebaseUI for Real-time database
+    implementation 'com.firebaseui:firebase-ui-database:6.2.0'
+
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:6.2.0'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.firebaseui:firebase-ui-database:4.3.2'
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation "com.google.firebase:firebase-database:19.2.0"
     implementation 'com.shuhart.stepview:stepview:1.5.1'
